--- a/App Back end/.env
+++ b/App Back end/.env
@@ -1,5 +1,5 @@
-# This .env file contains variables which are used to connect to the database. Values are in the 
-# ReadMe file 
+# This .env file contains variables which are used to connect to the database. Values need to be entered 
+# as explained in ReadMe file 
 Host = 
 User = 
 DatabaseName = 
